# retrofitivi

./: .gitignore  CMakeLists.txt  Main.qml  aiassist.qml  digitalauto.qml  libvss.py  main.cpp
aiassist/: aiassist.cpp  aiassist.hpp
digitalauto/: digitalauto.cpp  digitalauto.hpp
vss/: libvss.py  main  main_uint32.cpp  vssclient.py
